# senAI

./: .gitignore  PRD.md  README.md  main.py  openapi.json  pyproject.toml
backend/: README.md  alembic.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260610_0001_initial_phase1.py  20260610_0002_nullable_action_email.py
backend/app/: __init__.py  auth.py  config.py  database.py  main.py
backend/app/api/: __init__.py  agent.py  analytics.py  audit.py  contacts.py  dashboard.py  drafts.py  ingest.py  intelligence.py  rag.py  respond.py  threads.py
backend/app/models/: __init__.py  action.py  audit_log.py  contact.py  email.py  knowledge_chunk.py  thread.py  web_intelligence_cache.py
backend/app/schemas/: __init__.py  common.py  contact.py  draft.py  ingest.py  respond.py
backend/app/services/: __init__.py  agent.py  agent_tools.py  email_processor.py  heuristic_filter.py  llm_classifier.py  rag_pipeline.py  sentiment_tracker.py  web_scraper.py
backend/app/websocket/: manager.py
backend/scripts/: check_constraints.py  check_phase1_db.py  check_phase2_rag.py  check_phase3_bob_agent.py  check_phase4_api.py  get_threads_count.py  seed_kb.py  simulate_emails.py  test_gemini_fallback.py  triage_inbox_emails.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
knowledge_base/: api_docs.md  compliance_faq.md  escalation_matrix.md  pricing_policy.md  refund_policy.md  sla_policy.md
